--- a/test/index2.html
+++ b/test/index2.html
@@ -75,7 +75,9 @@ Do the following if you're using your customized build of modernizr (http://www.
 $(document).ready(function(){
   $('.bxslider').bxSlider({
   auto: true,
-  autoControls: true
+  autoControls: false,
+  speed:1000,
+  mode:'fade'
 });
 });
 </script>
@@ -124,12 +126,11 @@ $(document).ready(function(){
 	</ul>
         
 </div>
-<div>    
-	<a id="services-anchor"></a>
-</div>
 <!--Slider page ends here-->
 
 <div class="fluid">
+
+	<a id="services-anchor"></a>
 	<pre>
 	</pre>
 </div>
@@ -446,13 +447,13 @@ $(document).ready(function(){
     </div>
   </div>
 </div>
-</div>
-<script type="text/javascript" src="jquery2.min.js"></script>
+</div><!-- 
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script> -->
 		<script type="text/javascript" src="_js/jquery.easing.1.3.js"></script>
 		<!-- the jScrollPane script -->
 		<script type="text/javascript" src="_js/jquery.mousewheel.js"></script>
 		<script type="text/javascript" src="_js/jquery.contentcarousel.js"></script>
-        <!--<script type="text/javascript" src="js/jquery.automatic.js"></script> -->
+        <!-- <script type="text/javascript" src="js/jquery.automatic.js"></script> -->
 		<script type="text/javascript">
 			$('#ca-container').contentcarousel();
 		</script>
@@ -545,7 +546,6 @@ $(document).ready(function(){
 
 
 <!--Smooth Scroller Starts Here-->
-<script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
                 $(".contactLink").click(function(){
@@ -576,7 +576,7 @@ $(document).ready(function() {
       var $targetId = $(this.hash), $targetAnchor = $('[name=' + this.hash.slice(1) +']');
       var $target = $targetId.length ? $targetId : $targetAnchor.length ? $targetAnchor : false;
        if ($target) {
-         var targetOffset = $target.offset().top - 102;
+         var targetOffset = $target.offset().top -102;
          $(this).click(function() {
            $('html, body').animate({scrollTop: targetOffset}, 1000);
            var d = document.createElement("div");
