--- a/test/index.html
+++ b/test/index.html
@@ -645,6 +645,6 @@ $(document).ready(function() {
 * Copyright (c) 2012 Karl Swedberg; Licensed MIT, GPL */
 </script>
 <!--Smooth Scroller Ends Here-->
-
+<div>This is the changes</div>
 </body>
 </html>
